Fix horizontal scroll

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,10 @@ html {
     padding: 0;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 section {
     min-height: 100vh;
 }/*Revisar si lo quito*/
